<resources>
    <string name="app_name">TravelSpot</string>
    <string name="bienvenue">Welcome</string>
    <string name="sportif_high">High</string>
    <string name="mod_r_medium">Medium</string>
    <string name="tranquille_low">Low</string>
    <string name="niveau_d_effort_physique">Physical effort level</string>
    <string name="duree_souhaite">Desired duration (hours)</string>
    <string name="budget_maximum">Maximum Budget (€)</string>
    <string name="g_n_rer_le_parcours">Generate journey</string>
    <string name="step_1_of_5">Step 1 of 5</string>
    <string name="culture" translatable="false">Culture</string>
    <string name="description_placeholder_nprice_15_nduration_2h">Description… Price: 15€ Duration: 2h</string>
    <string name="horaires_d_ouverture">Opening hours</string>
    <string name="view_on_map">View on Map</string>
    <string name="next_step">Next Step</string>
    <string name="finalize_journey">Finalize Journey</string>
    <string name="create_your_journey">Create Your Journey</string>
    <string name="back">Back</string>
    <string name="destination">Destination</string>
    <string name="activities">Activities</string>
    <string name="food">Food</string>
    <string name="leisure">Leisure</string>
    <string name="budget">Budget</string>
    <string name="range">Range</string>
    <string name="duration">Duration</string>
    <string name="hours">Hours</string>
    <string name="effort_level">Effort Level</string>
    <string name="low_effort">Low Effort</string>
    <string name="medium_effort">Medium Effort</string>
    <string name="high_effort">High Effort</string>
    <string name="create_journey">Create Journey</string>
    <string name="summary">Summary…</string>
    <string name="journey_completed">Journey Completed!</string>
    <string name="you_ve_reached_your_destination_nhope_you_enjoyed_the_trip">You\'ve reached your destination.\nHope you enjoyed the trip!</string>
    <string name="do_you_want_to_keep_this_memory">Do you want to keep this memory?</string>
    <string name="save_to_my_trips">Save to My Trips</string>
    <string name="back_to_home">Back to Home</string>
    <string name="your_custom_route">Your Custom Route</string>
    <string name="trip_overview">Trip Overview</string>
    <string name="total_cost">Total Cost</string>
    <string name="weather">Weather</string>
    <string name="est_duration">Est. Duration</string>
    <string name="start_journey">Start Journey</string>
    <string name="map_view">Map View</string>
    <string name="shuffle">Shuffle</string>
    <string name="export_pdf">Export PDF</string>
    <string name="save_this_trip">Save This Trip</string>
    <string name="your_journey_your_pace">Your journey, your pace.</string>
    <string name="create_a_new_route">Create a new route</string>
    <string name="view_a_route">View a route</string>
    <string name="my_saved_trips">My Saved Trips</string>
    <string name="no_trips_saved_yet">No trips saved yet.</string>
    <string name="spot_name">Spot name</string>
    <string name="spot_image">Spot image</string>
    <string name="category_price">Category - Price</string>
    <string name="log_in">Log in</string>
    <string name="create_an_account">Create an account</string>
    <string name="travelspot">TravelSpot</string>
    <string name="photo_by">Photo by : ..</string>
    <string name="explore_community">Explore Community</string>
    <string name="newest">Newest</string>
    <string name="oldest">Oldest</string>
    <string name="most_liked">Most Liked</string>
    <string name="no_shared_trips_matching_your_search">No trips matching your search.</string>
    <string name="export">Export</string>
    <string name="share_with_community">Share with Community</string>
    <string name="profile">Profile</string>
    <string name="explore">Explore</string>
    <string name="my_profile">My profile</string>
    <string name="parameters">Parameters</string>
    <string name="liked_trips">Liked trips : 0</string>
    <string name="log_out">Log out</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="enter_email">Enter email</string>
    <string name="email">Email</string>
    <string name="enter_password">Enter password</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_register_now">Don\'t have an account? Register now.</string>
    <string name="welcome_register_to_get_started">Welcome! Register to get started</string>
    <string name="enter_your_username">Enter username</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm_your_password">Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_log_in_now">Already have an account? Log in now.</string>
</resources>